styles.css
h2,
h4 {
  color: #fff;
}

/* ----------------------------------- Navbar ------------------------------------*/
.navbar {
  transition: background-color 0.3s;
  z-index: 1000; /* Ensure navbar is above other elements */
  height: 15vh;
}

.navbar-brand img {
  padding-left: 10vw;
  max-height: 20vh;
  margin-top: 0vh;
}

.navbar-nav a {
  font-size: 2.5vh;
  text-transform: uppercase;
  font-weight: 150;
}

.navbar-collapse {
  padding-right: 10vw;
}

.navbar-scroll {
  background-color: transparent;
}

.navbar-scroll .nav-link,
.navbar-scroll .navbar-toggler-icon,
.navbar-scrolled .nav-link,
.navbar-scrolled .navbar-toggler-icon,
.footer-link {
  color: #fff;
}

.navbar-scrolled {
  background-color: black;
}

/* ----------------------------------- Video Section ------------------------------------*/
.video-container {
  z-index: -100;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  position: relative;
  top: 0;
  left: 0;
}

#video-bg {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.video-tint {
  position: absolute; /* Positions the overlay over the video */
  top: 0;
  left: 0;
  width: 100%; /* Ensures the overlay covers the entire container */
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Adds a black tint with 50% opacity */
  pointer-events: none; /* Allows interactions with elements beneath the overlay */
}

/* ----------------------------------- About Section ------------------------------------*/

.about-section-padding {
  padding-top: 10vh;
  padding-bottom: 20vh;
}
.about-section-padding p {
  color: black;
}

.row-pb-10 {
  padding-bottom: 10vh;
}

.about-services {
  padding-bottom: 5vh;
}

.about-services span {
  font-family: sans-serif;
  background: linear-gradient(to bottom right, black, orange);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.service-item {
  position: relative;
  padding-top: 10vh;
}

.service-item-1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(./images/interior-cleaning.jpeg);
  background-size: cover;
  background-position: center;
  height: 23vh;
}
.service-item-2 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(./images/car-polishing.jpeg);
  background-size: cover;
  background-position: center;
  height: 23vh;
}

.service-item-3 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(./images/ceramic-coating.jpg);
  background-size: cover;
  background-position: center;
  height: 23vh;
}

.service-item-4 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(./images/ppf.jpg);
  background-size: cover;
  background-position: center;
  height: 23vh;
}

.about-services h1 span {
  font-size: 140%;
  font-weight: bold;
  font-family: sans-serif;
  color: black;
  padding-bottom: 10vh;
}

.service-title {
  color: #fff;
  text-transform: uppercase;
  font-size: 30px;
  font-weight: bold;
  font-family: sans-serif;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* ----------------------------------- Footer Section ------------------------------------*/

.first-word {
  color: white;
}

.second-word {
  color: darkorange;
}

.logo-image {
  max-height: 49px;
  padding-bottom: 4px;
}

.footer {
  background-color: black;
  height: auto;
}

.footer-social-icon {
  height: 75px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
}

.connect-us {
  color: #fff;
  flex-direction: column;
}

.map {
  padding-top: 5%;
  height: 400px;
  width: 400px;
}

p {
  color: #fff;
}

.logo-name {
  display: flex;
}
.copyright {
  display: flex;
  justify-content: center;
}

.footer-info {
  display: flex;
  padding-top: 5%;
}

.about-us,
.location {
  padding-right: 20px;
}

.row-coating-info {
  display: flex;
  justify-content: center;
}

.row-coating-info > .bla-bla {
  padding-left: 100px;
}

.coating-info-video .row-coating-info .col-5 > h1 {
  color: black;
  font-weight: 800;
}

.coating-info-video .row-coating-info .col-5 > p {
  color: black;
  width: 90%;
  font-size: large;
}

.coating-info-video .row-coating-info .col-5 > button {
  background-color: black;
  border-color: darkorange;
}

.video-thumbnail {
  position: relative;
  width: 100vw;
  height: 50vw;
  max-width: 600px;
  max-height: 340px;
  margin: 0 auto;
  cursor: pointer;
}

.video-thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.play-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 15%;
  height: 15%;
  background: url("https://img.icons8.com/ios-filled/100/ffffff/play-button-circled.png")
    no-repeat center;
  background-size: contain;
}

.video-popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.8);
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.video-popup-content {
  position: relative;
  width: calc(40vw * 16 / 9);
  height: 40vw;
  margin: 0;
  padding: 0;
}

.video-popup-content iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  padding: 0;
  margin: 0;
  display: block;
}

.global-container {
  padding-left: 10vw; /* Adjust for your design */
  padding-right: 10vw; /* Adjust for your design */
  margin-left: auto;
  margin-right: auto;
}

/* ----------------------------------- Follow Us Section ------------------------------------*/
.follow-us-section {
  background-color: #f0f1f4;
  opacity: 0.8;
}

.follow-us-container {
  display: flex;
  align-items: center;
}

.follow-us-container > .row > .col-5 > h2 {
  color: black;
}

